--- a/domain.yml
+++ b/domain.yml
@@ -1,24 +1,39 @@
 version: "3.1"
 
 slots:
-  recipient:
+  cat_breed:
     type: text
     mappings:
       - type: from_llm
-  amount:
-    type: float
+
+  favourite_id:
+    type: text
+    mappings:
+      - type: from_llm
+
+  last_cat_id:
+    type: text
     mappings:
       - type: from_llm
 
 responses:
-  utter_ask_recipient:
-    - text: "Who would you like to send money to?"
+  utter_greet:
+    - text: "Hi, I can show you cute cats and manage your favourites."
 
-  utter_ask_amount:
-    - text: "How much money would you like to send?"
+  utter_ask_cat_breed:
+    - text: "Which breed do you want to see? For example, Siamese or Persian."
 
-  utter_transfer_complete:
-    - text: "All done. {amount} has been sent to {recipient}."
+  utter_no_breed_found:
+    - text: "I could not find the breed {cat_breed}."
+
+  utter_favourites_empty:
+    - text: "You have no favourite cats yet."
+
+  utter_ask_favourite_id:
+    - text: "Which favourite should I remove? Give me its number."
+
+  utter_can_do_something_else:
+    - text: ""
 
   utter_free_chitchat_response:
     - text: "placeholder"
@@ -26,10 +41,18 @@ responses:
         rephrase: True
         rephrase_prompt: |
           The following is a conversation with an AI assistant built with Rasa.
-          The assistant can help the user transfer money.
-          The assistant is helpful, creative, clever, and very friendly.
+          The assistant can show the user cute cat pictures and manage their favourites.
+          The assistant is cheerful, creative, clever, and very friendly.
           The user is making small talk, and the assistant should respond, keeping things light.
-          Context / previous conversation with the user:
+          The assistant should not ask any questions to the user.
+          Here is context / previous conversation with the user:
           {{history}}
           {{current_input}}
           Suggested AI Response:
+
+actions:
+  - action_get_random_cat
+  - action_get_cat_by_breed
+  - action_add_favourite
+  - action_list_favourites
+  - action_remove_favourite
