--- a/data/flows.yml
+++ b/data/flows.yml
@@ -1,8 +1,34 @@
 flows:
-  transfer_money:
-    description: Help users send money to friends and family.
+  greet_user:
+    description: "Greet the user"
     steps:
-      - collect: recipient
-      - collect: amount
-        description: the number of US dollars to send
-      - action: utter_transfer_complete
+      - action: utter_greet
+
+  random_cat:
+    description: "Show a random cat"
+    steps:
+      - action: action_get_random_cat
+
+  cat_by_breed:
+    description: "Show cat information by breed"
+    steps:
+      - collect: cat_breed
+        description: "Breed name of the cat"
+      - action: action_get_cat_by_breed
+
+  favourite_cat:
+    description: "Add the last shown cat to favourites"
+    steps:
+      - action: action_add_favourite
+
+  list_favourites:
+    description: "Show the list of favourite cats"
+    steps:
+      - action: action_list_favourites
+
+  remove_favourite:
+    description: "Remove a cat from favourites"
+    steps:
+      - collect: favourite_id
+        description: "ID of the favourite cat to remove"
+      - action: action_remove_favourite
